--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 	"author": "varun",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"morgan": "^1.10.0",
+		"winston": "^3.2.1",
+		"winston-daily-rotate-file": "^4.4.2"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.3",
-		"winston": "^3.2.1"
+		"nodemon": "^2.0.3"
 	}
 }
