--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"author": "varun",
 	"license": "MIT",
 	"dependencies": {
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0",
 		"winston": "^3.2.1",
