--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "nodemon src/index.js",
-		"eslint": "./node_modules/eslint/bin/eslint.js ."
+		"lint": "./node_modules/eslint/bin/eslint.js --ignore-path .gitignore ."
 	},
 	"keywords": [
 		"javascript",
