--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "Express app prod configuration",
 	"main": "index.js",
 	"scripts": {
-		"start": "nodemon src/index.js",
-		"lint": "./node_modules/eslint/bin/eslint.js --ignore-path .gitignore ."
+		"lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
+		"babel-node": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node -- src/app.js",
+		"start": "./node_modules/.bin/run-s lint babel-node"
 	},
 	"keywords": [
 		"javascript",
@@ -26,10 +27,19 @@
 		"winston-daily-rotate-file": "^4.4.2"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.9.6",
+		"@babel/node": "^7.8.7",
+		"@babel/preset-env": "^7.9.6",
 		"eslint": "^7.0.0",
 		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-import": "^2.20.2",
-		"nodemon": "^2.0.3"
+		"nodemon": "^2.0.3",
+		"npm-run-all": "^4.1.5"
+	},
+	"babel": {
+		"presets": [
+			"@babel/preset-env"
+		]
 	}
 }
