babel & jest configuration moved to respective files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
 		"semi": 0,
 		"space-before-function-paren": "off",
 		"no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
-		"comma-dangle": ["error", "never"]
+		"comma-dangle": ["error", "never"],
+		"import/prefer-default-export": 0
 	}
 }
