--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
 	"description": "Express app prod configuration",
 	"main": "index.js",
 	"scripts": {
+		"test": "jest",
+		"test:coverage": "jest --coverage",
+		"test:watch": "jest --watch",
 		"lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
 		"babel-node": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node -- src/app.js",
 		"start": "./node_modules/.bin/run-s lint babel-node"
@@ -34,12 +37,8 @@
 		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-import": "^2.20.2",
+		"jest": "^26.0.1",
 		"nodemon": "^2.0.3",
 		"npm-run-all": "^4.1.5"
-	},
-	"babel": {
-		"presets": [
-			"@babel/preset-env"
-		]
 	}
 }
