--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 	"devDependencies": {
 		"@babel/core": "^7.9.6",
 		"@babel/node": "^7.8.7",
+		"@babel/plugin-proposal-class-properties": "^7.8.3",
 		"@babel/preset-env": "^7.9.6",
+		"babel-eslint": "^10.1.0",
 		"eslint": "^7.0.0",
 		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-config-prettier": "^6.11.0",
