--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0",
+		"swagger-jsdoc": "^4.0.0",
+		"swagger-ui-express": "^4.1.4",
 		"winston": "^3.2.1",
 		"winston-daily-rotate-file": "^4.4.2"
 	},
