--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"axios": "^0.19.2",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-validator": "^6.5.0",
 		"morgan": "^1.10.0",
 		"swagger-jsdoc": "^4.0.0",
 		"swagger-ui-express": "^4.1.4",
