--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,11 @@
 {
-	"extends": ["eslint:recommended", "airbnb-base", "prettier"],
+	"extends": [
+		"eslint:recommended",
+		"plugin:import/errors",
+		"plugin:import/warnings",
+		"airbnb-base",
+		"prettier"
+	],
 	"env": {
 		"node": true,
 		"commonjs": true,
@@ -10,6 +16,7 @@
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
 	},
+	"plugins": ["import"],
 	"parser": "babel-eslint",
 	"parserOptions": {
 		"ecmaVersion": 2018,
@@ -20,15 +27,17 @@
 			"experimentalObjectRestSpread": true
 		}
 	},
+	"noInlineConfig": true,
+	"reportUnusedDisableDirectives": true,
 	"rules": {
 		"no-console": 0,
-		"indent": ["error", "tab"],
-		"linebreak-style": ["error", "unix"],
-		"quotes": ["error", "single"],
+		"indent": [2, "tab"],
+		"linebreak-style": [2, "unix"],
+		"quotes": [2, "single"],
 		"semi": 0,
 		"space-before-function-paren": "off",
 		"no-unused-vars": [
-			"error",
+			2,
 			{
 				"vars": "all",
 				"args": "all",
@@ -36,9 +45,97 @@
 				"argsIgnorePattern": "^_"
 			}
 		],
-		"comma-dangle": ["error", "never"],
-		"import/prefer-default-export": 0,
+		"comma-dangle": [2, "never"],
+		"block-scoped-var": 2,
+		"complexity": [2, { "max": 5 }],
+		"consistent-return": 2,
+		"default-case": 2,
+		"default-param-last": 2,
+		"dot-location": [2, "property"],
+		"dot-notation": 2,
+		"eqeqeq": 2,
+		"max-classes-per-file": [2, 1],
+		"no-alert": 2,
+		"no-caller": 2,
+		"no-constructor-return": 2,
+		"no-empty-function": 2,
+		"no-eq-null": 2,
+		"no-eval": 2,
+		"no-extend-native": 2,
+		"no-floating-decimal": 2,
+		"no-implicit-globals": [2, { "lexicalBindings": true }],
+		"no-invalid-this": 2,
+		"no-lone-blocks": 2,
+		"no-loop-func": 2,
+		"no-new-wrappers": 2,
+		"no-param-reassign": 2,
+		"no-return-assign": 2,
+		"no-return-await": 2,
+		"no-sequences": 2,
+		"no-throw-literal": 2,
+		"no-unmodified-loop-condition": 2,
+		"no-useless-call": 2,
+		"no-useless-concat": 2,
+		"prefer-promise-reject-errors": [2, { "allowEmptyReject": true }],
+		"vars-on-top": 2,
+		"require-await": 2,
+		"no-undefined": 2,
+		"no-use-before-define": 2,
+		"camelcase": [2, { "allow": ["^UNSAFE_"] }],
+		"func-names": [2, "as-needed"],
+		"id-match": [2, "^[_a-zA-Z]+([a-zA-Z]+)*$"],
+		"max-len": 2,
+		"max-lines-per-function": [
+			2,
+			{ "max": 50, "skipBlankLines": true, "skipComments": true, "IIFEs": true }
+		],
+		"max-nested-callbacks": [2, 3],
+		"max-params": [2, 4],
+		"max-statements": [2, 10, { "ignoreTopLevelFunctions": true }],
+		"max-statements-per-line": [2, { "max": 1 }],
+		"new-cap": [2, { "newIsCap": true, "capIsNew": false }],
+		"no-array-constructor": 2,
+		"no-mixed-operators": 2,
+		"no-negated-condition": 2,
+		"no-nested-ternary": 2,
+		"no-new-object": 2,
+		"no-plusplus": 2,
+		"no-unneeded-ternary": 2,
+		"no-underscore-dangle": 0,
+		"sort-keys": 2,
+		"no-duplicate-imports": [2, { "includeExports": true }],
+		"no-useless-constructor": 2,
+		"prefer-rest-params": 2,
+		"prefer-spread": 2,
+		"arrow-spacing": 2,
+		"no-var": 2,
+		"prefer-arrow-callback": 2,
+		"prefer-const": 2,
+		"prefer-destructuring": [
+			2,
+			{
+				"array": true,
+				"object": true
+			},
+			{
+				"enforceForRenamedProperties": false
+			}
+		],
+		"prefer-template": 2,
+		"sort-imports": [
+			2,
+			{
+				"ignoreCase": false,
+				"ignoreDeclarationSort": true,
+				"ignoreMemberSort": false,
+				"memberSyntaxSortOrder": ["all", "single", "multiple", "none"]
+			}
+		],
 		"lines-between-class-members": 0,
-		"no-underscore-dangle": 0
+		"import/no-unresolved": [2, { "commonjs": true, "amd": true }],
+		"import/named": 2,
+		"import/default": 2,
+		"import/export": 2,
+		"import/prefer-default-export": 0
 	}
 }
