--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "jest",
 		"test:coverage": "jest --coverage",
 		"test:watch": "jest --watch",
-		"lint": "./node_modules/.bin/eslint --ignore-path .gitignore .",
+		"lint": "./node_modules/.bin/eslint --fix .",
 		"babel-node": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node -- src/app.js",
 		"start": "./node_modules/.bin/run-s lint babel-node"
 	},
