--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^6.11.0",
 		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jest": "^23.13.2",
 		"eslint-plugin-promise": "^4.2.1",
 		"jest": "^26.0.1",
 		"nodemon": "^2.0.3",
