--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test:coverage": "jest --coverage",
 		"test:watch": "jest --watch",
 		"lint": "./node_modules/.bin/eslint --fix .",
-		"babel-node": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node -- src/app.js",
+		"babel-node": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node -- src/index.js",
 		"start": "./node_modules/.bin/run-s lint babel-node"
 	},
 	"keywords": [
@@ -36,7 +36,9 @@
 		"@babel/core": "^7.9.6",
 		"@babel/node": "^7.8.7",
 		"@babel/plugin-proposal-class-properties": "^7.8.3",
+		"@babel/plugin-transform-runtime": "^7.10.1",
 		"@babel/preset-env": "^7.9.6",
+		"@types/jest": "^25.2.3",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^6.11.0",
@@ -45,6 +47,7 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"jest": "^26.0.1",
 		"nodemon": "^2.0.3",
-		"npm-run-all": "^4.1.5"
+		"npm-run-all": "^4.1.5",
+		"supertest": "^4.0.2"
 	}
 }
