--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-validator": "^6.5.0",
+		"http-errors": "^1.7.3",
 		"json-stringify-safe": "^5.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"swagger-ui-express": "^4.1.4",
