--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"json-stringify-safe": "^5.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"swagger-ui-express": "^4.1.4",
+		"uuid": "^8.1.0",
 		"winston": "^3.2.1",
 		"winston-daily-rotate-file": "^4.4.2"
 	},
